# ARCU-Extract-Downloader

./: Cargo.toml
.gitea/workflows/: build_release.yaml
src/: clients.rs  config.rs  extract_file.rs  extractor.rs  main.rs  service.rs
