[package]
name = "extract-downloader"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
md5 = "0.8.0"
russh = "=0.54.5"
russh-sftp = "2.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal", "io-std"] }
toml = "0.9.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3", features = ["time", "registry"] }
windows-service = "0.8"
windows-sys = { version = "0.61", features = [ "Win32_Foundation" ] }
